# analyze_iq_sc

./: ..root  .xml  CSR_Online_Server_status.txt  README.md  analyzed_files_iq.txt  analyzed_files_sc.txt  clear.sh  parameters_default.toml  parameters_test.toml  result.root  setup.cfg  synced_files_iq.txt  synced_files_sc.txt
Analyze_iq_sc/: __main__.py  __main__.py~
Analyze_iq_sc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
analyze_iq_sc/: __main__.py  __main__.py~
analyze_iq_sc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
