[metadata]
name = Analyze_iq_sc
version = attr: Analyze_iq_sc.version.__version__
author = ruijiu and xaratustrah
url = https://github.com/ruijiuchen/Analyze_iq_sc
description = A program for analyze data on server.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Science
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7, <4
packages = find:

[options.entry_points]
console_scripts = 
    Analyze_iq_sc = Analyze_iq_sc.__main__:main